alteração de inteface

--- a/front-end/src/app/user/user-login-form/user-login-form.component.html
+++ b/front-end/src/app/user/user-login-form/user-login-form.component.html
@@ -2,15 +2,12 @@
   <mat-grid-tile [colspan]="2">
     <mat-card class="min-width">
       <mat-card-header>
-        <mat-card-title>Título</mat-card-title>
+        <mat-card-title class="titulo">Conecte-se</mat-card-title>
       </mat-card-header>
 
-      <mat-card-content>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam atque, nobis eos doloremque obcaecati blanditiis
-        a architecto nesciunt facilis ducimus minus? Nisi laudantium adipisci officia voluptatem mollitia voluptate,
-        tempora blanditiis.
-        <br/>
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugiat vel voluptas repellat labore, cumque modi repudiandae adipisci temporibus assumenda maxime iure eaque ea deleniti laudantium maiores veniam illo iusto vitae.
+      <mat-card-content class="textoDescricao">
+        <br>
+        Conectando quem oferece a quem procura uma oportunidade!!
       </mat-card-content>
     </mat-card>
   </mat-grid-tile>
