--- a/front-end/src/app/user/user-login-form/user-login-form.component.scss
+++ b/front-end/src/app/user/user-login-form/user-login-form.component.scss
@@ -18,3 +18,11 @@ mat-card {
 @media screen and (max-width: 1380px) {
 
 }
+
+.titulo{
+  font-size: 50px;
+}
+
+.textoDescricao{
+  font-size: 20px;
+}
