--- a/front-end/src/app/top-bar/top-bar.component.html
+++ b/front-end/src/app/top-bar/top-bar.component.html
@@ -1,3 +1,3 @@
 <mat-toolbar color="primary">
-  <a class="home" routerLink="/">LOGO</a>
+  <a class="home" routerLink="/">CONECTE-SE</a>
 </mat-toolbar>
