--- a/front-end/src/app/user/user-login-form/user-login-form.component.html
+++ b/front-end/src/app/user/user-login-form/user-login-form.component.html
@@ -31,7 +31,7 @@
       </mat-card-content>
 
       <mat-card-actions align="start">
-        <button mat-raised-button color="primary" (click)="onLogin()">Logar</button>
+        <button [disabled]="!form.valid" mat-raised-button color="primary" (click)="onLogin()">Logar</button>
 
         <button mat-raised-button (click)="onRegister()">Cadastrar-se</button>
       </mat-card-actions>
