Adicionado botão OK ao SnackBar.

--- a/front-end/src/app/user/user-login-form/user-login-form.component.scss
+++ b/front-end/src/app/user/user-login-form/user-login-form.component.scss
@@ -15,14 +15,12 @@ mat-card {
   min-width: 450px;
 }
 
-@media screen and (max-width: 1380px) {
+@media screen and (max-width: 1380px) {}
 
-}
-
-.titulo{
+.titulo {
   font-size: 50px;
 }
 
-.textoDescricao{
+.textoDescricao {
   font-size: 20px;
 }
