--- a/front-end/src/app/user/user-login-form/user-login-form.component.html
+++ b/front-end/src/app/user/user-login-form/user-login-form.component.html
@@ -21,7 +21,7 @@
       <mat-card-content>
         <form [formGroup]="form">
           <mat-form-field class="full-width">
-            <input matInput placeholder="Usuário" formControlName="userName">
+            <input matInput placeholder="E-mail" formControlName="userEmail">
           </mat-form-field>
 
           <mat-form-field class="full-width">
