--- a/front-end/src/app/user/user-register-form/user-register-form.component.html
+++ b/front-end/src/app/user/user-register-form/user-register-form.component.html
@@ -31,9 +31,8 @@
     </form>
   </mat-card-content>
 
-  <mat-card-actions align="start">
+  <mat-card-actions allign="start">
     <button [disabled]="!form.valid" mat-raised-button color="primary" (click)="onRegister()">Cadastrar-se</button>
-
     <button mat-raised-button (click)="onCancel()">Cancelar</button>
   </mat-card-actions>
 </mat-card>
