--- a/front-end/src/app/user/user-register-form/user-register-form.component.html
+++ b/front-end/src/app/user/user-register-form/user-register-form.component.html
@@ -6,33 +6,61 @@
   <mat-card-content>
     <form [formGroup]="form" class="min-width">
       <mat-form-field class="input-width">
-        <input type="email" matInput placeholder="Email" formControlName="email">
+        <mat-label>Email</mat-label>
+        <input type="email" matInput placeholder="Ex: pat@exemplo.com" formControlName="email"
+          [ngClass]="{ 'is-invalid': submitted && form.controls['email'].errors }">
+        <mat-error *ngIf="form.controls['email'].errors?.['email']">
+          Entre com um email valido
+        </mat-error>
+        <mat-error *ngIf="form.controls['email'].errors?.['required']">
+          Campo obrigatório
+        </mat-error>
       </mat-form-field>
 
       <mat-form-field class="input-width">
-        <input type="tel" matInput placeholder="Telefone" formControlName="phone">
+        <mat-label>Telefone</mat-label>
+        <input type="number" matInput placeholder="Ex: 51997812243" formControlName="phone">
+        <mat-error *ngIf="form.controls['phone'].errors?.['required']">
+          Campo obrigatório
+        </mat-error>
       </mat-form-field>
 
       <mat-form-field class="input-width">
-        <input matInput placeholder="Nome" formControlName="name">
+        <mat-label>Nome</mat-label>
+        <input matInput placeholder="Ex: João" formControlName="name">
+        <mat-error *ngIf="form.controls['name'].errors?.['required']">
+          Campo obrigatório
+        </mat-error>
       </mat-form-field>
 
       <mat-form-field class="input-width">
-        <input matInput placeholder="Sobrenome" formControlName="lastName">
+        <mat-label>Sobrenome</mat-label>
+        <input matInput placeholder="Ex: Silva" formControlName="lastName">
+        <mat-error *ngIf="form.controls['lastName'].errors?.['required']">
+          Campo obrigatório
+        </mat-error>
       </mat-form-field>
 
       <mat-form-field class="input-width">
+        <mat-label>Senha</mat-label>
         <input type="password" matInput placeholder="Senha" formControlName="password">
+        <mat-error *ngIf="form.controls['password'].errors?.['required']">
+          Campo obrigatório
+        </mat-error>
       </mat-form-field>
 
       <mat-form-field class="input-width">
+        <mat-label>Confirmar Senha</mat-label>
         <input type="password" matInput placeholder="Confirmar Senha" formControlName="confPassword">
+        <mat-error *ngIf="form.controls['confPassword'].errors?.['required']">
+          Campo obrigatório
+        </mat-error>
       </mat-form-field>
     </form>
   </mat-card-content>
 
   <mat-card-actions align="start">
-    <button [disabled]="!form.valid" mat-raised-button color="primary" (click)="onRegister()">Cadastrar-se</button>
+    <button mat-raised-button color="primary" (click)="onSubmit()">Cadastrar-se</button>
 
     <button mat-raised-button (click)="onCancel()">Cancelar</button>
   </mat-card-actions>
