--- a/front-end/src/app/user/user-login-form/user-login-form.component.html
+++ b/front-end/src/app/user/user-login-form/user-login-form.component.html
@@ -21,17 +21,33 @@
       <mat-card-content>
         <form [formGroup]="form">
           <mat-form-field class="full-width">
-            <input matInput placeholder="E-mail" formControlName="userEmail">
+            <mat-label>Email</mat-label>
+
+            <input matInput placeholder="Ex: pat@examplo.com" formControlName="email">
+
+            <mat-error *ngIf="form.controls['email'].errors?.['email']">
+              Entre com um email valido
+            </mat-error>
+
+            <mat-error *ngIf="form.controls['email'].errors?.['required']">
+              Campo obrigatório
+            </mat-error>
           </mat-form-field>
 
           <mat-form-field class="full-width">
+            <mat-label>Senha</mat-label>
+
             <input type="password" matInput placeholder="Senha" formControlName="password">
+
+            <mat-error *ngIf="form.controls['password'].errors?.['required']">
+              Campo obrigatório
+            </mat-error>
           </mat-form-field>
         </form>
       </mat-card-content>
 
       <mat-card-actions align="start">
-        <button [disabled]="!form.valid" mat-raised-button color="primary" (click)="onLogin()">Logar</button>
+        <button [disabled]="!form.valid" mat-raised-button color="primary" (click)="onSubmit()">Logar</button>
 
         <button mat-raised-button (click)="onRegister()">Cadastrar-se</button>
       </mat-card-actions>
