--- a/front-end/src/app/user/user-register-form/user-register-form.component.html
+++ b/front-end/src/app/user/user-register-form/user-register-form.component.html
@@ -7,11 +7,13 @@
     <form [formGroup]="form" class="min-width">
       <mat-form-field class="input-width">
         <mat-label>Email</mat-label>
-        <input type="email" matInput placeholder="Ex: pat@exemplo.com" formControlName="email"
-          [ngClass]="{ 'is-invalid': submitted && form.controls['email'].errors }">
+
+        <input type="email" matInput placeholder="Ex: pat@exemplo.com" formControlName="email">
+
         <mat-error *ngIf="form.controls['email'].errors?.['email']">
           Entre com um email valido
         </mat-error>
+
         <mat-error *ngIf="form.controls['email'].errors?.['required']">
           Campo obrigatório
         </mat-error>
@@ -19,15 +21,23 @@
 
       <mat-form-field class="input-width">
         <mat-label>Telefone</mat-label>
-        <input type="number" matInput placeholder="Ex: 51997812243" formControlName="phone">
+
+        <input type="text" matInput placeholder="Ex: 51997812243" formControlName="phone">
+
         <mat-error *ngIf="form.controls['phone'].errors?.['required']">
           Campo obrigatório
+        </mat-error>
+
+        <mat-error *ngIf="form.controls['phone'].errors?.['pattern']">
+          Digite somente números
         </mat-error>
       </mat-form-field>
 
       <mat-form-field class="input-width">
         <mat-label>Nome</mat-label>
+
         <input matInput placeholder="Ex: João" formControlName="name">
+
         <mat-error *ngIf="form.controls['name'].errors?.['required']">
           Campo obrigatório
         </mat-error>
@@ -35,7 +45,9 @@
 
       <mat-form-field class="input-width">
         <mat-label>Sobrenome</mat-label>
+
         <input matInput placeholder="Ex: Silva" formControlName="lastName">
+
         <mat-error *ngIf="form.controls['lastName'].errors?.['required']">
           Campo obrigatório
         </mat-error>
@@ -43,7 +55,9 @@
 
       <mat-form-field class="input-width">
         <mat-label>Senha</mat-label>
+
         <input type="password" matInput placeholder="Senha" formControlName="password">
+
         <mat-error *ngIf="form.controls['password'].errors?.['required']">
           Campo obrigatório
         </mat-error>
@@ -51,9 +65,15 @@
 
       <mat-form-field class="input-width">
         <mat-label>Confirmar Senha</mat-label>
+
         <input type="password" matInput placeholder="Confirmar Senha" formControlName="confPassword">
+
         <mat-error *ngIf="form.controls['confPassword'].errors?.['required']">
           Campo obrigatório
+        </mat-error>
+
+        <mat-error *ngIf="form.controls['confPassword'].errors?.['matching']">
+          Campo inválido
         </mat-error>
       </mat-form-field>
     </form>
