--- a/front-end/src/app/top-bar/top-bar.component.html
+++ b/front-end/src/app/top-bar/top-bar.component.html
@@ -1,3 +1,8 @@
 <mat-toolbar color="primary">
+  <div>
+    <button mat-button>
+      <mat-icon>menu</mat-icon>
+    </button>
+  </div>
   <a class="home" routerLink="/">CONECTE-SE</a>
 </mat-toolbar>
