--- a/front-end/src/app/app.component.scss
+++ b/front-end/src/app/app.component.scss
@@ -1,1 +1,23 @@
+.sidenav-container {
+  flex: 1;
 
+  .sidenav {
+    min-width: 240px;
+
+    a.router {
+      padding: 6px 24px;
+      width: 100%;
+      text-align: left;
+    }
+  }
+
+  .content {
+    padding: 18px 24px;
+  }
+
+}
+
+.toolbar-router {
+  text-decoration: none;
+  color: white;
+}
