--- a/front-end/src/app/app.component.scss
+++ b/front-end/src/app/app.component.scss
@@ -8,11 +8,18 @@
       padding: 6px 24px;
       width: 100%;
       text-align: left;
+      vertical-align: middle;
+      align-items: center;
+      display: inline-flex;
+    }
+    a.router mat-icon {
+      margin-right: 10px;
     }
   }
 
   .content {
     padding: 18px 24px;
+    height: 89.3vh;
   }
 
 }
@@ -20,4 +27,5 @@
 .toolbar-router {
   text-decoration: none;
   color: white;
+  margin-left: 15px;
 }
