Caminho de oportunidades

--- a/front-end/src/app/app.component.html
+++ b/front-end/src/app/app.component.html
@@ -36,6 +36,15 @@
             <span>Login</span>
           </a>
         </mat-list-item>
+
+        <mat-divider></mat-divider>
+
+        <mat-list-item>
+          <a class="router" [routerLink]="'/opp'">
+            <mat-icon class="mat-18">handshake</mat-icon>
+            <span>Oportunidades</span>
+          </a>
+        </mat-list-item>
       </mat-nav-list>
     </mat-sidenav>
 
