--- a/front-end/src/app/opportunity/opportunity/opportunity.component.html
+++ b/front-end/src/app/opportunity/opportunity/opportunity.component.html
@@ -11,7 +11,7 @@
   </div>
 
   <div fxLayoutAlign="end end">
-    <button mat-mini-fab color="warn">
+    <button mat-mini-fab color="warn" (click)="addOpportunity()">
       <mat-icon>add</mat-icon>
     </button>
   </div>
