--- a/front-end/src/app/opportunity/opportunity-form-dialog/opportunity-form-dialog.component.html
+++ b/front-end/src/app/opportunity/opportunity-form-dialog/opportunity-form-dialog.component.html
@@ -1,7 +1,7 @@
-<h1 mat-dialog-title>Criar oportunidade</h1>
+<h1 mat-dialog-title>Oportunidade</h1>
 
 <div mat-card-content>
-  <form [formGroup]="form">
+  <form [formGroup]="form" fxLayout="column">
     <mat-form-field>
       <mat-label>Título</mat-label>
 
@@ -14,9 +14,12 @@
     <mat-form-field>
       <mat-label>Descrição</mat-label>
 
-      <input matInput placeholder="Ex: Horário das 10h às 18h, Rua dos Ratos, n° 33"><!--TODO Trocar por textarea-->
+      <textarea #description rows="5" maxlength="256" matInput placeholder="Ex: Horário das 10h às 18h, Rua dos Ratos, n° 33" formControlName="description"></textarea>
+      <mat-hint align="end">{{ description.value.length }} / 256</mat-hint>
       <mat-error *ngIf="form.controls['description'].errors?.['required']">
         Campo obrigatório
+      </mat-error><mat-error *ngIf="form.controls['description'].errors?.['maxLength']">
+        Campo não pode passar de 256 caracteres.
       </mat-error>
     </mat-form-field>
   </form>
