--- a/front-end/src/app/opportunity/opportunity/opportunity.component.html
+++ b/front-end/src/app/opportunity/opportunity/opportunity.component.html
@@ -5,6 +5,7 @@
         <!--TODO carregar oportunidades-->
       </mat-tab>
       <mat-tab label="Minhas Oportunidades">
+        <!--TODO mostrar campo apenas se usuário estiver logado-->
         <!--TODO carregar oportunidades do usuário logado-->
       </mat-tab>
     </mat-tab-group>
