--- a/front-end/src/app/opportunity/opportunity-form-dialog/opportunity-form-dialog.component.html
+++ b/front-end/src/app/opportunity/opportunity-form-dialog/opportunity-form-dialog.component.html
@@ -1,27 +1,88 @@
 <h1 mat-dialog-title>Oportunidade</h1>
 
-<div mat-card-content>
-  <form [formGroup]="form" fxLayout="column">
-    <mat-form-field>
-      <mat-label>Título</mat-label>
+<div mat-card-content style="max-width: 500px;">
+  <form [formGroup]="form">
+    <div fxLayout="column">
+      <mat-form-field>
+        <mat-label>Título</mat-label>
 
-      <input matInput placeholder="Ex: Recepcionista" formControlName="title">
-      <mat-error *ngIf="form.controls['title'].errors?.['required']">
-        Campo obrigatório
-      </mat-error>
-    </mat-form-field>
+        <input matInput placeholder="Ex: Recepcionista" formControlName="titulo">
+        <mat-error *ngIf="form.controls['titulo'].errors?.['required']">
+          Campo obrigatório
+        </mat-error>
+      </mat-form-field>
 
-    <mat-form-field>
-      <mat-label>Descrição</mat-label>
+      <mat-form-field>
+        <mat-label>Endereço</mat-label>
 
-      <textarea #description rows="5" maxlength="256" style="max-height: 400px;" matInput placeholder="Ex: Horário das 10h às 18h, Rua dos Ratos, n° 33" formControlName="description"></textarea>
-      <mat-hint align="end">{{ description.value.length }} / 256</mat-hint>
-      <mat-error *ngIf="form.controls['description'].errors?.['required']">
-        Campo obrigatório
-      </mat-error><mat-error *ngIf="form.controls['description'].errors?.['maxLength']">
-        Campo não pode passar de 256 caracteres.
-      </mat-error>
-    </mat-form-field>
+        <input matInput placeholder="Ex: Rua Alberto, n° 33" formControlName="endereco" />
+        <mat-error *ngIf="form.controls['endereco'].errors?.['required']">
+          Campo obrigatório
+        </mat-error>
+      </mat-form-field>
+    </div>
+
+    <div fxLayout="row wrap" fxLayoutAlign="space-between center">
+      <mat-form-field fxFlex="55">
+        <mat-label>Telefone</mat-label>
+
+        <input matInput placeholder="Ex: 51998334454" formControlName="telefone" />
+        <mat-error *ngIf="form.controls['telefone'].errors?.['pattern']">
+          Telefone inválido
+        </mat-error>
+      </mat-form-field>
+
+      <mat-form-field fxFlex="35">
+        <mat-label>Valor(R$)</mat-label>
+
+        <input matInput placeholder="Ex: 150,22" formControlName="valor" />
+        <mat-error *ngIf="form.controls['valor'].errors?.['pattern']">
+          Valor inválido
+        </mat-error>
+      </mat-form-field>
+    </div>
+
+    <div fxLayout="row wrap" fxLayoutAlign="space-between center">
+      <mat-form-field fxFlex="55">
+        <!--TODO trocar formato de data para DD/MM/YYYY-->
+        <mat-label>Validade</mat-label>
+
+        <input matInput placeholder="" [matDatepicker]="picker" formControlName="validade" />
+        <mat-hint>MM/DD/YYYY</mat-hint>
+        <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+        <mat-datepicker #picker>
+          <mat-datepicker-actions>
+            <button mat-raised-button color="primary" matDatepickerApply>Aplicar</button>
+            <button mat-raised-button matDatepickerCancel>Cancelar</button>
+          </mat-datepicker-actions>
+        </mat-datepicker>
+        <mat-error *ngIf="form.controls['validade'].errors?.['required']">
+          Campo obrigatório
+        </mat-error>
+      </mat-form-field>
+
+      <mat-form-field fxFlex="35">
+        <mat-label>Categoria</mat-label>
+
+        <input matInput placeholder="" formControlName="categoria" />
+      </mat-form-field>
+    </div>
+
+    <div fxLayout="column">
+      <mat-form-field>
+        <mat-label>Descrição</mat-label>
+
+        <textarea #description rows="5" maxlength="256" style="max-height: 400px;" matInput
+          placeholder="Ex: Horário das 10h às 18h." formControlName="descricao"></textarea>
+        <mat-hint align="end">{{ description.value.length }} / 256</mat-hint>
+        <mat-error *ngIf="form.controls['descricao'].errors?.['required']">
+          Campo obrigatório
+        </mat-error>
+        <mat-error *ngIf="form.controls['descricao'].errors?.['maxLength']">
+          Campo não pode passar de 256 caracteres
+        </mat-error>
+      </mat-form-field>
+    </div>
   </form>
 </div>
 
