--- a/front-end/src/app/user/user-login-form/user-login-form.component.html
+++ b/front-end/src/app/user/user-login-form/user-login-form.component.html
@@ -22,13 +22,13 @@
           <mat-form-field class="full-width">
             <mat-label>Email</mat-label>
 
-            <input matInput placeholder="Ex: pat@examplo.com" formControlName="email">
+            <input matInput placeholder="Ex: pat@examplo.com" formControlName="mail">
 
-            <mat-error *ngIf="form.controls['email'].errors?.['email']">
+            <mat-error *ngIf="form.controls['mail'].errors?.['email']">
               Entre com um email valido
             </mat-error>
 
-            <mat-error *ngIf="form.controls['email'].errors?.['required']">
+            <mat-error *ngIf="form.controls['mail'].errors?.['required']">
               Campo obrigatório
             </mat-error>
           </mat-form-field>
@@ -36,9 +36,9 @@
           <mat-form-field class="full-width">
             <mat-label>Senha</mat-label>
 
-            <input type="password" matInput placeholder="Senha" formControlName="password">
+            <input type="password" matInput placeholder="Senha" formControlName="senha">
 
-            <mat-error *ngIf="form.controls['password'].errors?.['required']">
+            <mat-error *ngIf="form.controls['senha'].errors?.['required']">
               Campo obrigatório
             </mat-error>
           </mat-form-field>
