--- a/front-end/src/app/user/user-register-form/user-register-form.component.scss
+++ b/front-end/src/app/user/user-register-form/user-register-form.component.scss
@@ -1,3 +1,12 @@
+input[type=number]::-webkit-outer-spin-button,
+input[type=number]::-webkit-inner-spin-button {
+  display: none;
+}
+
+input[type=number] {
+  -moz-appearance: textfield;
+}
+
 mat-card {
   max-width: 60%;
   margin: 2em auto;
