--- a/front-end/src/app/opportunity/opportunity/opportunity.component.html
+++ b/front-end/src/app/opportunity/opportunity/opportunity.component.html
@@ -1,18 +1,17 @@
-<div fxLayout="column wrap">
-  <div fxLayoutAlign="start start">
+<div fxLayout="row wrap" fxLayoutGap="0px" fxLayoutAlign="space-between">
+  <div fxFlex>
     <mat-tab-group>
       <mat-tab label="Oportunidades">
         <!--TODO carregar oportunidades-->
       </mat-tab>
       <mat-tab label="Minhas Oportunidades">
         <!--TODO mostrar minhas oportunidades apenas quando usuário estiver logado-->
-        <!--TODO mostrar campo apenas se usuário estiver logado-->
         <!--TODO carregar oportunidades do usuário logado-->
       </mat-tab>
     </mat-tab-group>
   </div>
 
-  <div fxLayoutAlign="end end">
+  <div  fxLayoutAlign="end start">
     <button mat-mini-fab color="warn" (click)="addOpportunity()">
       <mat-icon>add</mat-icon>
     </button>
