--- a/front-end/src/app/user/user-register-form/user-register-form.component.html
+++ b/front-end/src/app/user/user-register-form/user-register-form.component.html
@@ -79,7 +79,7 @@
     </form>
   </mat-card-content>
 
-  <mat-card-actions align="start">
+  <mat-card-actions fxlayout="row" fxLayoutAlign="start center" fxLayoutGap="5px">
     <button mat-raised-button color="primary" (click)="onSubmit()">Cadastrar-se</button>
 
     <button mat-raised-button (click)="onCancel()">Cancelar</button>
