--- a/front-end/src/app/opportunity/opportunity-form-dialog/opportunity-form-dialog.component.html
+++ b/front-end/src/app/opportunity/opportunity-form-dialog/opportunity-form-dialog.component.html
@@ -82,7 +82,12 @@
       <mat-form-field fxFlex="40">
         <mat-label>Categoria</mat-label>
 
-        <input matInput placeholder="" formControlName="categoria" />
+        <mat-select matNativeControl>
+          <mat-option value="" selected></mat-option>
+          <mat-option value="1">Emprego</mat-option>
+          <mat-option value="2">Estágio</mat-option>
+          <mat-option value="3">Imóvel</mat-option>
+        </mat-select>
       </mat-form-field>
     </div>
 
