--- a/front-end/src/app/opportunity/opportunity/opportunity.component.html
+++ b/front-end/src/app/opportunity/opportunity/opportunity.component.html
@@ -1,39 +1,10 @@
 <div fxLayout="column wrap">
-  <div fxLayoutAlign="center start">
+  <div fxLayoutAlign="start start">
     <mat-tab-group>
       <mat-tab label="Oportunidades">
-        <div *ngIf="opps$ | async as opps; else loading">
-          <div *ngFor="let opp of opps">
-            <mat-card style="min-width: 450px; max-height: 500px; margin: 10px 0;">
-              <mat-card-title-group>
-                <mat-card-title>{{ opp.titulo }}</mat-card-title>
-
-                <mat-card-subtitle *ngIf="opp.criador">{{ opp.criador.nome + opp.criador.sobrenome + " - " +
-                  opp.criador.mail + " - " + opp.criador.telefone}}</mat-card-subtitle>
-              </mat-card-title-group>
-
-              <mat-divider></mat-divider>
-
-              <mat-card-content style="padding: 5px; min-height: 70px;">
-                <div>
-                  {{ opp.descricao }}
-                </div>
-              </mat-card-content>
-
-              <mat-divider></mat-divider>
-
-              <mat-card-footer style="padding: 5px;">
-                <div fxLayoutAlign="space-between end">
-                  <span>{{ opp.endereco }} </span>
-
-                  <span>{{ (opp.dataCriacao | dateDdmmyyyy) + " - " + (opp.validade | dateDdmmyyyy) }}</span>
-                </div>
-              </mat-card-footer>
-            </mat-card>
-          </div>
-        </div>
+        <!--TODO carregar oportunidades-->
       </mat-tab>
-      <mat-tab label="Minhas Oportunidades" *ngIf="isLogged">
+      <mat-tab label="Minhas Oportunidades">
         <!--TODO mostrar minhas oportunidades apenas quando usuário estiver logado-->
         <!--TODO mostrar campo apenas se usuário estiver logado-->
         <!--TODO carregar oportunidades do usuário logado-->
@@ -41,15 +12,9 @@
     </mat-tab-group>
   </div>
 
-  <div style="display: flex; position: fixed;" *ngIf="isLogged">
+  <div fxLayoutAlign="end end">
     <button mat-mini-fab color="warn" (click)="addOpportunity()">
       <mat-icon>add</mat-icon>
     </button>
   </div>
 </div>
-
-<ng-template #loading>
-  <div class="loading-spinner">
-    <mat-spinner diameter="50" mode="indeterminate"></mat-spinner>
-  </div>
-</ng-template>
