--- a/front-end/src/app/app.component.scss
+++ b/front-end/src/app/app.component.scss
@@ -24,6 +24,13 @@
 
 }
 
+.avatar {
+  margin-top: 16px;
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+}
+
 .toolbar-router {
   text-decoration: none;
   color: white;
