--- a/front-end/src/app/opportunity/opportunity/opportunity.component.html
+++ b/front-end/src/app/opportunity/opportunity/opportunity.component.html
@@ -1,10 +1,40 @@
 <div fxLayout="column wrap">
-  <div fxLayoutAlign="start start">
+  <div fxLayoutAlign="center start">
     <mat-tab-group>
       <mat-tab label="Oportunidades">
-        <!--TODO carregar oportunidades-->
+        <div *ngIf="opps$ | async as opps; else loading">
+          <div *ngFor="let opp of opps">
+            <mat-card style="min-width: 450px; max-height: 200px; margin: 10px 0;">
+              <mat-card-title-group>
+                <mat-card-title>{{ opp.titulo }}</mat-card-title>
+
+                <mat-card-subtitle *ngIf="opp.criador">{{ opp.criador.nome + opp.criador.sobrenome + " - " +
+                  opp.criador.mail }}</mat-card-subtitle>
+              </mat-card-title-group>
+
+              <mat-divider></mat-divider>
+
+              <mat-card-content style="padding: 5px; min-height: 70px;">
+                <div>
+                  {{ opp.descricao }}
+                </div>
+              </mat-card-content>
+
+              <mat-divider></mat-divider>
+
+              <mat-card-footer style="padding: 5px;">
+                <div fxLayoutAlign="space-between end">
+                  <span>{{ opp.endereco }} </span>
+
+                  <span>{{ (opp.dataCriacao | dateDdmmyyyy) + " - " + (opp.validade | dateDdmmyyyy) }}</span>
+                </div>
+              </mat-card-footer>
+            </mat-card>
+          </div>
+        </div>
       </mat-tab>
-      <mat-tab label="Minhas Oportunidades">
+
+      <mat-tab label="Minhas Oportunidades" *ngIf="isLogged">
         <!--TODO mostrar minhas oportunidades apenas quando usuário estiver logado-->
         <!--TODO mostrar campo apenas se usuário estiver logado-->
         <!--TODO carregar oportunidades do usuário logado-->
@@ -12,9 +42,15 @@
     </mat-tab-group>
   </div>
 
-  <div fxLayoutAlign="end end">
+  <div style="display: flex; position: fixed;" *ngIf="isLogged">
     <button mat-mini-fab color="warn" (click)="addOpportunity()">
       <mat-icon>add</mat-icon>
     </button>
   </div>
 </div>
+
+<ng-template #loading>
+  <div class="loading-spinner">
+    <mat-spinner diameter="50" mode="indeterminate"></mat-spinner>
+  </div>
+</ng-template>
